<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:text="@string/minus"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/plus"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="@+id/minus"
        app:layout_constraintStart_toStartOf="@+id/minus" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/multiply"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/minus"
        app:layout_constraintStart_toStartOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/equal"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/share"
        app:layout_constraintStart_toStartOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/share" />

    <Button
        android:id="@+id/share"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/share"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/multiply"
        app:layout_constraintStart_toStartOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/zero"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/zero"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toEndOf="@+id/one"
        app:layout_constraintStart_toStartOf="@+id/one" />

    <Button
        android:id="@+id/one"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/one"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <Button
        android:id="@+id/two"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="25dp"
        android:text="@string/two"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

    <Button
        android:id="@+id/three"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/three"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <Button
        android:id="@+id/four"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/four"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <Button
        android:id="@+id/five"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/five"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/two"
        app:layout_constraintStart_toStartOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/six"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/six"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <Button
        android:id="@+id/seven"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/seven"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <Button
        android:id="@+id/eight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/eight"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/five"
        app:layout_constraintStart_toStartOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/nine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:text="@string/nine"
        android:textAppearance="@null"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <TextView
        android:id="@+id/output"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLines="2"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>